kubernetes/kustomize/overlays/production/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-cobros
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-estudiantes
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-instructores
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-vehiculos
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-asignaciones
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-reportes
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notificaciones
spec:
  replicas: 2
