kubernetes/kustomize/overlays/production/resource-patch-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth
spec:
  template:
    spec:
      containers:
      - name: ms-auth
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-cobros
spec:
  template:
    spec:
      containers:
      - name: ms-cobros
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-estudiantes
spec:
  template:
    spec:
      containers:
      - name: ms-estudiantes
        resources:
          requests:
            cpu: 150m
            memory: 384Mi
          limits:
            cpu: 750m
            memory: 768Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-instructores
spec:
  template:
    spec:
      containers:
      - name: ms-instructores
        resources:
          requests:
            cpu: 150m
            memory: 384Mi
          limits:
            cpu: 750m
            memory: 768Mi
