kubernetes/kustomize/overlays/production/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: proyecto-prod-network-policy
  namespace: proyecto-production
spec:
  podSelector:
    matchLabels:
      app: proyecto-titulacion
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: proyecto-production
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8081
    - protocol: TCP
      port: 8082
    - protocol: TCP
      port: 8083
    - protocol: TCP
      port: 8084
    - protocol: TCP
      port: 8085
    - protocol: TCP
      port: 8086
    - protocol: TCP
      port: 8087
    - protocol: TCP
      port: 8088
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: proyecto-production
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 5672
    - protocol: TCP
      port: 8761
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
